--- a/index.html
+++ b/index.html
@@ -115,6 +115,57 @@
 </div>
 </section>
 
+<section id="slider" class="parallax section" style="background-color:black">
+<div class="wrapsection">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div id="Carousel" class="carousel slide">
+					<ol class="carousel-indicators">
+						<li data-target="#Carousel" data-slide-to="0" class="active"></li>
+						<li data-target="#Carousel" data-slide-to="1"></li>
+						<li data-target="#Carousel" data-slide-to="2"></li>
+					</ol>
+					<div class="carousel-inner">
+						<div class="item active">
+							<blockquote>
+								<p class="lead">
+									Medical Societies membership.
+								</p>
+								<small><a href="advisory.html">See more</a></small>
+							</blockquote>
+						</div>
+						<div class="item">
+							<blockquote>
+								<p class="lead">
+									Member of Advisory Board/Society Appointment.
+								</p>
+								<small><a href="advisory.html">See more</a></small>
+							</blockquote>
+						</div>
+						<div class="item">
+							<blockquote>
+								<p class="lead">
+									Honorary Positions.
+								</p>
+								<small><a href="advisory.html">See more</a></small>
+							</blockquote>
+						</div>
+					</div>
+					<a class="left carousel-control" href="#Carousel" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left"></span>
+					</a>
+					<a class="right carousel-control" href="#Carousel" data-slide="next">
+					<span class="glyphicon glyphicon-chevron-right"></span>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+</section>
+
+
 <section id="" class="parallax section" style="">
 <div class="wrapsection">
 	<div class="parallax-overlay" style="background-color:#00c1c1;opacity:1;"></div>
@@ -131,7 +182,7 @@
 			</div>
 			<div class="col-md-4 col-sm-6">
 				<div class="service-box wow zoomIn" data-wow-duration="1.5s" data-wow-delay="0.1s">
-					<img src="https://sangwansahil.github.io/Photo4.jpg" alt="">
+					<img src="https://sangwansahil.github.io/Photo4.JPG" alt="">
 					<h3>Designation</h3>
 					<div class="text-left">
 						<p>
@@ -214,7 +265,7 @@
 </section>
 <!-Gallery
 	================================================== -->
-<section id="gallery" class="" style="">
+<!--<section id="gallery" class="" style="">
 <div class="wrapsection">
 	<div class="parallax-overlay" style="background-color:white;"></div>
 	<div class="container">
@@ -246,58 +297,10 @@
 		</div>
 	</div>
 </div>
-</section>
+</section>-->
 <!-- Text Carousel
 	================================================== -->
-<section id="slider" class="parallax section" style="background-color:black">
-<div class="wrapsection">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<div id="Carousel" class="carousel slide">
-					<ol class="carousel-indicators">
-						<li data-target="#Carousel" data-slide-to="0" class="active"></li>
-						<li data-target="#Carousel" data-slide-to="1"></li>
-						<li data-target="#Carousel" data-slide-to="2"></li>
-					</ol>
-					<div class="carousel-inner">
-						<div class="item active">
-							<blockquote>
-								<p class="lead">
-									Medical Societies membership.
-								</p>
-								<small><a href="advisory.html">See more</a></small>
-							</blockquote>
-						</div>
-						<div class="item">
-							<blockquote>
-								<p class="lead">
-									Member of Advisory Board/Society Appointment.
-								</p>
-								<small><a href="advisory.html">See more</a></small>
-							</blockquote>
-						</div>
-						<div class="item">
-							<blockquote>
-								<p class="lead">
-									Honorary Positions.
-								</p>
-								<small><a href="advisory.html">See more</a></small>
-							</blockquote>
-						</div>
-					</div>
-					<a class="left carousel-control" href="#Carousel" data-slide="prev">
-					<span class="glyphicon glyphicon-chevron-left"></span>
-					</a>
-					<a class="right carousel-control" href="#Carousel" data-slide="next">
-					<span class="glyphicon glyphicon-chevron-right"></span>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-</section>
+
 
 <!-- Credits 
 =============================================== -->
@@ -305,10 +308,10 @@
 	<span class="social wow zoomIn">
 	<a href="#"><i class="fa fa-facebook"></i></a>
 	<a href="#"><i class="fa fa-twitter"></i></a>
-	<a href="#"><i class="fa fa-skype"></i></a>
+	
 	<a href="#"><i class="fa fa-linkedin"></i></a>
-	<a href="#"><i class="fa fa-pinterest"></i></a>
-	<a href="#"><i class="fa fa-google-plus"></i></a>
+	
+	
 	</span><br/>
 	Virender Sangwan &copy; 
 	<br/>
