--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<div class="maintitle">
 				<h3 class="section-title justtitle" >About</h3>
 				<p class="lead bottom0" style="">
-					 Dr Virender Singh Sangwan is the Head Cornea & Anterior Segment in LV Prasad Eye Institute(LVPEI),Banjara Hills’ Hyderabad-500034. He is the recepient of year 2006’s Shanti Swarup Bhatnagar Award (SSB) in Medical Sciences. Virender Singh Sangwan completed his medical graduate degree from Maharshi Dayanand University, Haryana, in 1986 and MS Ophthalmology in 1991. He did a fellowship in Cornea & Anterior Segment at L V Prasad Eye Institute, and another in Immunology & Uveitis Services at Harvard Medical School, USA. Now he is Director of Cornea & Anterior Segment, Ocular Immunology & Uveitis Services at L V Prasad Eye Institute, Hyderabad. He is also Adjunct Associate Professor of Ophthalmology, University of Rochester, New York, USA.
+					 Dr Virender Singh Sangwan is the Paul Dubord Chair in Cornea & Anterior Segment in LV Prasad Eye Institute(LVPEI),Banjara Hills Hyderabad. His areas of specialization include stem cells, corneal diseases, ocular surface disorders, cataract surgery, uveitis and ocular allergy. He is the recepient of the Shanti Swarup Bhatnagar Award (2006) in Medical Sciences, National Technology award(2007) and Sun Pharma Science Award for medical research in 2016. Virender Singh Sangwan completed his medical graduate degree from Maharshi Dayanand University, Haryana, in 1986 and MS Ophthalmology in 1991. He did a fellowship in Cornea & Anterior Segment at L V Prasad Eye Institute, and another in Immunology & Uveitis Services at Harvard Medical School, USA. Now he is Director of Cornea & Anterior Segment, Ocular Immunology & Uveitis Services at L V Prasad Eye Institute, Hyderabad. He is also Adjunct Associate Professor of Ophthalmology, University of Rochester, New York, USA.
 					 <a href="about.html" style="color: grey;">Read More..</a>
 				</p>
 			</div>
@@ -176,7 +176,7 @@
 				<div class="maintitle">
 					<h3 class="section-title">Specialization and designation</h3>
 					<p class="lead">
-						Dr.Sangwan specialises in many fields on eye care with a primary focus on cornea.
+						Dr.Sangwan specialises in several fields in eye care with a primary focus on stem cells, corneal diseases, cataract and uveitis.
 					</p>
 				</div>
 			</div>
@@ -186,17 +186,16 @@
 					<h3>Designation</h3>
 					<div class="text-left">
 						<p>
+							Director, Center for Ocular Regeneration (CORE).
+						</p>
+						<p>
 							Director, Srujana-Center for Innovation.
 						</p>
 						<p>
-							Director, LVP- MITRA center for innovation.
+							Dr.Paul Dubord Chair in Cornea.
 						</p>
-						<p>
-							Director, Director Clinical Trial Center - LVPEI.
-						</p>
-						<p>
-							Director, Center for Ocular Regeneration (CORE).
-						</p>
+						
+						
 						<p class="text-center">
 							<button type="button" class="btn btn-info btn-md"><a href="research.html">View Research</a></button>
 						</p>
@@ -240,6 +239,7 @@
 					<button type="button" class="btn btn-info btn-md"><a href="publication.html">View Publications</a></button>
 				</div>
 			</div>
+			
 		</div>
 	</div>
 </div>
