full stop remove

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<div class="herotext">
 				<h1 class="wow bounceInDown" data-wow-duration="1s" data-wow-delay="0.1s">DR.VIRENDER <span class="lighter">SANGWAN</span></h1>
 				<p class="lead wow zoomIn" data-wow-duration="2s" data-wow-delay="0.5s">
-					Eye for you. 
+					Eye for you
 				</p>
 				<p>
 					<a href="about.html" class="btn btn-default btn-lg wow fadeInLeft" role="button"> About </a> &nbsp; <a href="research.html" class="btn btn-default btn-lg wow fadeInRight" role="button">Research</a>
