--- a/research.html
+++ b/research.html
@@ -87,6 +87,35 @@
 					<h3 class="section-title">CLinical Trials and Research Grants</h3>
 					<p class="lead">
 					<hr>
+					<p>
+					<b>Dr. Virender S. Sangwan</b> is today recognized across the world ophthalmic community as a leader in the area of stem cell treatment for restoring the damaged cornea and restore vision in good measure. Starting from his first such surgery (termed cultivated limbal epithelial transplantation or CLET) in the year 2001, he has now provided stem cell treatment to the damaged corneas of over 1300 patients at L V Prasad Eye Institute, Hyderabad, with a success rate of over 70%. His combination of basic research, surgical applications, and current research into the causes for why the therapy fails in certain individuals has made this possible, and for India to consider declaring limbal stem cell treatment as a clinical procedure, just as it has done for anemia (using bone marrow derived cells) and cardiomyocytes in chosen heart conditions. In addition, he has simplified the limbal stem cell therapy (termed simple limbal epithelial transplantation or SLET) to the extent that it can be done in situ in vivo on the patient, with no need to do laboratory culture. This advance makes it possible for any qualified corneal surgeon to undertake SLET. Here is a short summary of what he has been involved in over the last 16 years.
+					</p>
+					<p>
+					<b>a) Initation of Limbal Stem Cell therapy<b> 
+
+					Dr Sangwan initiated limbal stem cell therapy for corneal burns as early as in 2001 with the support and clearance from the Department of Biotechnology (DBT) and approved by the Institutional Review Board (IRB). This was just after the proof of concept papers appeared from Drs Pellegrini in Italy and Tsai in Taiwan. Even here, what differentiated his approach from the others was a set of innovations: (a) culture the cell explants on a scaffold (human amniotic membrane) rather than suspension culture, (b) no air-water interface, (c) use patient’s own serum rather than fetal calf serum (d) no use of mouse fibroblast as feeder cells. These innovations made large scale applications possible and easier. 
+					</p>
+					<p>
+					<b>b) Newer advances and applications</b> 
+
+					With the Bhatnagar Prize, Dr Sangwan’s recognition and reputation grew and the DBT supported the efforts at LVPEI through what they termed first in the “Programme Support in Eye Research” mode, and currently as a Centre of Excellence (CoE) for Translational Research in Eye Diseases. This allowed the establishment of sophisticated equipment and laboratories, and addition of more researchers (both basic and clinical) to the stem cell research and therapy team, led by Dr Sangwan, at LVPEI. Newer methods and procedures were tried. Some of the approaches are: 
+					i)        Do corneal transplantation (penetrating keratoplasty) on the eye where CLET was performed, thus improving the vision of the patient. 
+					ii)        Repeat the CLET procedure when the primary CLET failed. Here he has been able to show that repeat autologous CLET is safely repeatable and effective. 
+					iii)        Doing CLET along with conjunctival epithelium in cases where not just the cornea but the neighboring conjunctiva is also damaged. This novel co-culturing approach, tried for the first time by him, has a success rate of > 60%. 
+					iv)         Publication of a standardized protocol for in vitro culture and expansion of   limbal epithelial cells. 
+					</p>
+					<p>
+					<b>c) Current advances and achievements</b> 
+
+					Perhaps the most exciting advance that Dr Sangwan has made in the field of stem cell therapy is to do away with the need for laboratory culture! Instead, do the entire procedure of CLET in situ, in vivo, on the patient’s own eye! Called SLET or simple limbal epithelial transplantation, this advance has worked successfully on over 125 patients, again with over 72% success rate (as good as CLET), and particularly useful in children. This procedure is a breakthrough in the field, since it allows any qualified corneal surgeon to do SLET, with no need for a sophisticated and expensive lab, or the need for collaborating cell biologists. Happily enough, SLET is currently being practiced not only in other centres in India, but also in the US, Mexico, Nigeria and other places across the globe. It is for this breakthrough alone, if not for any of the above mentioned advances and achievements that the Sun Pharma Research Award should be given to Dr Sangwan. 
+					</p>
+					<p>
+
+					<b>d) Innovations</b> 
+
+					One of his innovations has been to do away with the ‘classical’ human amniotic membrane, which has been used for wound healing and as a scaffold for growing cells. While this is sterilized using standard procedures prior to use, there has always been the worry that it may harbor hidden (undetected) infections.  To this end, he collaborated with polymer scientists in the UK (through a Wellcome Trust Grant) and Australia (through an Indo-Australian collaboration), and standardized the use of biodegradable and biocompatible copolymer sheets, and also copolymer-coated contact lenses. The use of such copolymer sheets has become safe and easily stored replacement for the amniotic membrane.
+					</p>
+					<hr>
 					1.<b><p>	Optics of the growing Crystalline Lens</b>. ROI Grant from NIH.</p>
 					<p>Fabrice Manns, Project Director (PI), Authur Ho, Jean-Marie Parel, Sonia H Yoo, Craig A, Mckeown, Giovanni Gregori, Robert Augusteyn, <b>Virender S Sangwan</b>, Mukesh Taneja.</p>
 
