--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 </section>
 <!-Gallery
 	================================================== -->
-<!--<section id="gallery" class="" style="">
+<section id="gallery" class="" style="">
 <div class="wrapsection">
 	<div class="parallax-overlay" style="background-color:white;"></div>
 	<div class="container">
@@ -275,7 +275,7 @@
 					<h3 class="section-title" style="color: grey;">Talks</h3>
 					
 				</div>
-			</div>
+			
 			
 			<div class="col-md-4">
 				<iframe width="1200" height="675" src="https://www.youtube.com/embed/fjC2fMmrHH8" frameborder="0" allowfullscreen></iframe>
@@ -297,7 +297,9 @@
 		</div>
 	</div>
 </div>
-</section>-->
+</div>
+</div>
+</section>
 <!-- Text Carousel
 	================================================== -->
 
