--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 	================================================== -->
 <section id="gallery" class="" style="">
 <div class="wrapsection">
-	<div class="parallax-overlay" style="background-color:white;"></div>
+	<div class="parallax-overlay" style="background-color:black;"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 sol-sm-12">
