--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 </section>
 <!-Gallery
 	================================================== -->
-<section id="gallery" class="" style="">
+<section id="" class="parralax section" style="">
 <div class="wrapsection">
 	<div class="parallax-overlay" style="background-color:black;"></div>
 	<div class="container">
